Announced project close.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+*This project is pretty much dead.* Google+ is changing faster than I can keep up with, so features in this are breaking constantly. I may break some of the features (especially the mute button) out into separate extensions
+
 License: Creative Commons Attribution 3.0 Unported License 
          http://creativecommons.org/licenses/by/3.0/
 
