--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 *This project is pretty much dead.* Google+ is changing faster than I can keep up with, so features in this are breaking constantly. I may break some of the features (especially the mute button) out into separate extensions
 
+Links:
+
+* Googl+ Page (https://plus.google.com/b/101412622459954252510/101412622459954252510/posts)
+* Google Web Store (https://chrome.google.com/webstore/detail/google%20-tweaks/ldhcojnagiekommchjbokpofakjeknme)
+
 License: Creative Commons Attribution 3.0 Unported License 
          http://creativecommons.org/licenses/by/3.0/
 
